# stride

./: .travis.yml  CMakeCPP.cmake  DESCRIPTION  Makefile  README.md
main/cpp/: CMakeLists.txt
main/cpp/calendar/: Calendar.cpp  Calendar.h
main/cpp/contact/: AgeContactProfile.cpp  ContactPool.cpp  ContactPool.h  ContactType.cpp  ContactType.h  Infector.cpp  Infector.h  InfectorExec.h
main/cpp/disease/: DiseaseSeeder.cpp  Health.cpp  Health.h  HealthSeeder.cpp  HealthSeeder.h  ImmunitySeeder.cpp  PublicHealthAgency.cpp  PublicHealthAgency.h  TransmissionProfile.cpp
main/cpp/execs/: stride.cpp
main/cpp/pop/: ConstantVaccine.h  LinearVaccine.h  Person.cpp  Person.h  PopBuilder.cpp  Population.cpp  Population.h  SurveySeeder.cpp  Vaccine.h
main/cpp/sim/: HospitalisationConfig.cpp  HospitalisationConfig.h  Sim.cpp  Sim.h  SimBuilder.cpp
main/cpp/util/: StringUtils.h
main/python/: get_num_non_compliers.py
main/r/: CMakeLists.txt  rStride_abc_age.R  rStride_abc_collectivity.R  rStride_abc_wave.R  rStride_collectivity.R  rStride_contacts.R  rStride_gtester_covid19.R  rStride_intervention.R  rStride_intervention_baseline.R  rStride_superspreading.R  rStride_trans_prob_estimation.R
main/r/rstride/: ContactInspector.R  HealthAgencyData.R  IncidenceInspector.R  LogParser.R  Misc.R  ParameterEstimator.R  SummaryInspector.R  SurveyParticipantInspector.R  TransmissionInspector.R  rStride.R  rStride_main_abc.R
main/r/rstride/factories/: CalendarFactory.R  HouseholdClusterFactory.R  SymptomaticProfileFactory.R
main/resources/data/: calendar_gtester_covid19_distancing.csv  contact_matrix_flanders_conditional_teachers_collectivity20.xml  covid19_reference_data.csv  covid19_serology_BE_reference.csv
main/resources/rstride_test/: regression_rstride_incidence.rds  regression_rstride_out_abc.rds  regression_rstride_prevalence.rds  regression_rstride_summary.rds
test/cpp/gtester/: ScenarioData.cpp
